--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
             <div class = "mainCardBundle">
 
-                <div class = "markedButton"> Save 69% </div>
+                <div class = "markedButton"> Save 70% </div>
 
                 <div class = "upperCard">
 
@@ -138,7 +138,7 @@
                 </div>
                 <div class = "lowerCard">
 
-                    <h3 class = "cardTitle"> All clockfaces (32+) </h3>
+                    <h3 class = "cardTitle"> All clockfaces (34+) </h3>
 
                         <div class = "infoSection">
                           <div>
@@ -158,19 +158,17 @@
 
             <div class = "mainCardBundle">
 
-              <div class = "markedButton"> Until Dec </div>
-
                     <div class = "upperCard">
 
-                        <div class = "slideButtonLeft" onclick="getBundleName(autumnBundle,this)"><i class="fas fa-chevron-left"></i></div>
-                        <div class = "slideButtonRight" onclick="getBundleName(autumnBundle,this)"><i class="fas fa-chevron-right"></i></div>
+                        <div class = "slideButtonLeft" onclick="getBundleName(womenBundle,this)"><i class="fas fa-chevron-left"></i></div>
+                        <div class = "slideButtonRight" onclick="getBundleName(womenBundle,this)"><i class="fas fa-chevron-right"></i></div>
 
-                        <img class = "cardImage" src = "images/autumnBundle.jpg" draggable="false" id = "autumnBundle" draggable="false">
+                        <img class = "cardImage" src = "images/womenScreen.jpg" draggable="false" id = "womenBundle" draggable="false">
 
                     </div>
                     <div class = "lowerCard">
 
-                        <h3 class = "cardTitle"> Autumn Collection (6 faces) </h3>
+                        <h3 class = "cardTitle"> Women collection (8+) </h3>
 
                         <div class = "infoSection">
                           <div>
@@ -183,7 +181,7 @@
                       </div>
                         </div>
 
-                        <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3978" target = "_blank" draggable="false"><button class = "cardButton"> $5.99 </button></a>
+                        <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-4983" target = "_blank" draggable="false"><button class = "cardButton"> $8.99 </button></a>
 
                     </div>
 
@@ -547,9 +545,65 @@
                     </div>
                 </div>
 
-                <div class = "mainCard">
+                <div class = "mainCardSoon">
 
-                    <div class = "markedButton"> New </div>
+                    <div class = "markedButton"> Soon </div>
+
+                    <div class = "upperCard">
+
+                        <img class = "cardImage" src = "images/shinyScreen.jpg" draggable="false">
+
+                    </div>
+                    <div class = "lowerCard">
+
+                        <h3 class = "cardTitle"> Shiny </h3>
+
+                        <div class = "infoSection">
+                          <div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                        </div>
+                        <div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                      </div>
+                        </div>
+
+                       <button class = "cardButton"> $1.99</button>
+
+                    </div>
+                </div>
+
+                <div class = "mainCardSoon">
+
+                    <div class = "markedButton"> Soon </div>
+
+                    <div class = "upperCard">
+
+                        <img class = "cardImage" src = "images/glitterScreen.jpg" draggable="false">
+
+                    </div>
+                    <div class = "lowerCard">
+
+                        <h3 class = "cardTitle"> Glitter </h3>
+
+                        <div class = "infoSection">
+                          <div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                        </div>
+                        <div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                      </div>
+                        </div>
+
+                       <button class = "cardButton"> $1.99</button>
+
+                    </div>
+                </div>
+
+                <div class = "mainCard">
 
                     <div class = "upperCard">
 
@@ -661,9 +715,9 @@
                     </div>
                 </div>
 
-                <div class = "mainCardSoon">
+                <div class = "mainCard">
 
-                    <div class = "markedButton"> Soon </div>
+                    <div class = "markedButton"> New </div>
 
                     <div class = "upperCard">
 
@@ -685,7 +739,7 @@
                       </div>
                         </div>
 
-                       <button class = "cardButton"> $1.99</button>
+                       <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-4611" target="_blank"><button class = "cardButton"> $1.99</button></a>
 
                     </div>
                 </div>
@@ -934,8 +988,6 @@
                 </div>
 
                 <div class = "mainCard">
-
-                    <div class = "markedButton"> New </div>
 
                     <div class = "upperCard">
 
