--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 </div>
                 <div class = "lowerCard">
 
-                    <h3 class = "cardTitle"> All clockfaces (34+) </h3>
+                    <h3 class = "cardTitle"> All clockfaces (35+) </h3>
 
                         <div class = "infoSection">
                           <div>
@@ -168,7 +168,7 @@
                     </div>
                     <div class = "lowerCard">
 
-                        <h3 class = "cardTitle"> Women collection (8+) </h3>
+                        <h3 class = "cardTitle"> Women collection (9+) </h3>
 
                         <div class = "infoSection">
                           <div>
@@ -181,7 +181,7 @@
                       </div>
                         </div>
 
-                        <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-4983" target = "_blank" draggable="false"><button class = "cardButton"> $8.99 </button></a>
+                        <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-4983" target = "_blank" draggable="false"><button class = "cardButton"> $9.99 </button></a>
 
                     </div>
 
@@ -586,6 +586,35 @@
                     <div class = "lowerCard">
 
                         <h3 class = "cardTitle"> Glitter </h3>
+
+                        <div class = "infoSection">
+                          <div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                        </div>
+                        <div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                      </div>
+                        </div>
+
+                       <button class = "cardButton"> $1.99</button>
+
+                    </div>
+                </div>
+
+                <div class = "mainCardSoon">
+
+                    <div class = "markedButton"> Soon </div>
+
+                    <div class = "upperCard">
+
+                        <img class = "cardImage" src = "images/mandalaScreen.jpg" draggable="false">
+
+                    </div>
+                    <div class = "lowerCard">
+
+                        <h3 class = "cardTitle"> Mandala </h3>
 
                         <div class = "infoSection">
                           <div>
