--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
             <div class = "mainCardBundle">
 
-                <div class = "markedButton"> Save 72% </div>
+                <div class = "markedButton"> Save 73% </div>
 
                 <div class = "upperCard">
 
@@ -138,7 +138,7 @@
                 </div>
                 <div class = "lowerCard">
 
-                    <h3 class = "cardTitle"> All clockfaces (36+) </h3>
+                    <h3 class = "cardTitle"> All clockfaces (37+) </h3>
 
                         <div class = "infoSection">
                           <div>
@@ -151,7 +151,7 @@
                       </div>
                         </div>
 
-                        <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3375" target = "_blank" draggable="false"><button class = "cardButton"> $19.99 </button></a>
+                        <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3375" target = "_blank" draggable="false"><button class = "cardButton"> $14.99 </button></a>
 
                 </div>
             </div>
@@ -545,9 +545,36 @@
                     </div>
                 </div>
 
-                <div class = "mainCard">
+                <div class = "mainCardSoon">
 
-                    <div class = "markedButton"> New </div>
+                    <div class = "markedButton"> Soon </div>
+
+                    <div class = "upperCard">
+
+                        <img class = "cardImage" src = "images/greenScreen.jpg" draggable="false">
+
+                    </div>
+                    <div class = "lowerCard">
+
+                        <h3 class = "cardTitle"> Abstract Green </h3>
+
+                        <div class = "infoSection">
+                          <div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                        </div>
+                        <div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                      </div>
+                        </div>
+
+                       <button class = "cardButton"> $1.99</button>
+
+                    </div>
+                </div>
+
+                <div class = "mainCard">
 
                     <div class = "upperCard">
 
@@ -574,9 +601,9 @@
                     </div>
                 </div>
 
-                <div class = "mainCardSoon">
+                <div class = "mainCard">
 
-                    <div class = "markedButton"> Soon </div>
+                    <div class = "markedButton"> New </div>
 
                     <div class = "upperCard">
 
@@ -598,14 +625,12 @@
                       </div>
                         </div>
 
-                       <button class = "cardButton"> $1.99</button>
+                       <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-5075" target = "_blank"><button class = "cardButton"> $1.99</button></a>
 
                     </div>
                 </div>
 
-                <div class = "mainCardSoon">
-
-                    <div class = "markedButton"> Soon </div>
+                <div class = "mainCard">
 
                     <div class = "upperCard">
 
@@ -627,14 +652,12 @@
                       </div>
                         </div>
 
-                       <button class = "cardButton"> $1.99</button>
+                       <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-4976" target="_blank"><button class = "cardButton"> $1.99</button></a>
 
                     </div>
                 </div>
 
-                <div class = "mainCardSoon">
-
-                    <div class = "markedButton"> Soon </div>
+                <div class = "mainCard">
 
                     <div class = "upperCard">
 
@@ -656,7 +679,7 @@
                       </div>
                         </div>
 
-                       <button class = "cardButton"> $1.99</button>
+                       <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-4976" target = "_blank"><button class = "cardButton"> $1.99</button></a>
 
                     </div>
                 </div>
