--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     </div>
                     <div class = "lowerCard">
 
-                        <h3 class = "cardTitle"> Women collection (10+) </h3>
+                        <h3 class = "cardTitle"> Women collection </h3>
 
                         <div class = "infoSection">
                           <div>
@@ -181,7 +181,7 @@
                       </div>
                         </div>
 
-                        <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-4983" target = "_blank" draggable="false"><button class = "cardButton"> $9.60 </button></a>
+                        <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-4983" target = "_blank" draggable="false"><button class = "cardButton"> $10.40 </button></a>
 
                     </div>
 
@@ -261,7 +261,7 @@
                         </div>
                         <div class = "lowerCard">
 
-                            <h3 class = "cardTitle"> Squares (4+) </h3>
+                            <h3 class = "cardTitle"> Squares </h3>
 
                             <div class = "infoSection">
                               <div>
@@ -292,7 +292,7 @@
                         </div>
                         <div class = "lowerCard">
 
-                            <h3 class = "cardTitle"> Shapes Bundle (5+) </h3>
+                            <h3 class = "cardTitle"> Shapes Bundle </h3>
 
                             <div class = "infoSection">
                               <div>
@@ -305,7 +305,7 @@
                           </div>
                             </div>
 
-                            <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3978" target = "_blank" draggable="false"><button class = "cardButton"> $5.99 </button></a>
+                            <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3978" target = "_blank" draggable="false"><button class = "cardButton"> $7.99 </button></a>
 
                         </div>
 
@@ -658,6 +658,35 @@
 
                   </div>
               </div>
+
+              <div class = "mainCardSoon">
+
+                <div class = "markedButton"> Soon </div>
+
+                <div class = "upperCard">
+
+                    <img class = "cardImage" src = "images/flowScreen.jpg" draggable="false">
+
+                </div>
+                <div class = "lowerCard">
+
+                    <h3 class = "cardTitle"> Flow </h3>
+
+                    <div class = "infoSection">
+                      <div>
+                    <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                    <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                    </div>
+                    <div>
+                    <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
+                    <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                  </div>
+                    </div>
+
+                   <button class = "cardButton"> $1.99</button>
+
+                </div>
+            </div>
 
                 <div class = "mainCard">
 
