--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 </div>
                 <div class = "lowerCard">
 
-                    <h3 class = "cardTitle"> All clockfaces (38+) </h3>
+                    <h3 class = "cardTitle"> All clockfaces (40+) </h3>
 
                         <div class = "infoSection">
                           <div>
@@ -151,7 +151,7 @@
                       </div>
                         </div>
 
-                        <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3375" target = "_blank" draggable="false"><button class = "cardButton"> $14.99 </button></a>
+                        <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3375" target = "_blank" draggable="false"><button class = "cardButton"> $14.98 </button></a>
 
                 </div>
             </div>
@@ -603,8 +603,6 @@
 
                 <div class = "mainCard">
 
-                    <div class = "markedButton"> New </div>
-
                     <div class = "upperCard">
 
                         <img class = "cardImage" src = "images/polarScreen.jpg" draggable="false">
@@ -629,6 +627,35 @@
 
                     </div>
                 </div>
+
+                <div class = "mainCardSoon">
+
+                  <div class = "markedButton"> Soon </div>
+
+                  <div class = "upperCard">
+
+                      <img class = "cardImage" src = "images/snowyScreen.jpg" draggable="false">
+
+                  </div>
+                  <div class = "lowerCard">
+
+                      <h3 class = "cardTitle"> Snowy </h3>
+
+                      <div class = "infoSection">
+                        <div>
+                      <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                      <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                      </div>
+                      <div>
+                      <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
+                      <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                    </div>
+                      </div>
+
+                     <button class = "cardButton"> $1.99</button>
+
+                  </div>
+              </div>
 
                 <div class = "mainCardSoon">
 
@@ -823,9 +850,9 @@
                     </div>
                 </div>
 
-                <div class = "mainCardSoon">
+                <div class = "mainCard">
 
-                    <div class = "markedButton"> Soon </div>
+                    <div class = "markedButton"> New </div>
 
                     <div class = "upperCard">
 
@@ -847,7 +874,7 @@
                       </div>
                         </div>
 
-                       <button class = "cardButton"> $1.99</button>
+                       <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-4921" target="_blank"><button class = "cardButton"> $1.99</button></a>
 
                     </div>
                 </div>
