--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 </div>
                 <div class = "lowerCard">
 
-                    <h3 class = "cardTitle"> All clockfaces (41+) </h3>
+                    <h3 class = "cardTitle"> All clockfaces (42+) </h3>
 
                         <div class = "infoSection">
                           <div>
@@ -547,8 +547,6 @@
 
                 <div class = "mainCard">
 
-                    <div class = "markedButton"> New </div>
-
                     <div class = "upperCard">
 
                         <img class = "cardImage" src = "images/greenScreen.jpg" draggable="false">
@@ -634,12 +632,12 @@
 
                   <div class = "upperCard">
 
-                      <img class = "cardImage" src = "images/snowyScreen.jpg" draggable="false">
+                      <img class = "cardImage" src = "images/holyScreen.jpg" draggable="false">
 
                   </div>
                   <div class = "lowerCard">
 
-                      <h3 class = "cardTitle"> Snowy </h3>
+                      <h3 class = "cardTitle"> Holy Night </h3>
 
                       <div class = "infoSection">
                         <div>
@@ -663,6 +661,64 @@
 
                   <div class = "upperCard">
 
+                      <img class = "cardImage" src = "images/snowmanScreen.jpg" draggable="false">
+
+                  </div>
+                  <div class = "lowerCard">
+
+                      <h3 class = "cardTitle"> Snowman </h3>
+
+                      <div class = "infoSection">
+                        <div>
+                      <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                      <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                      </div>
+                      <div>
+                      <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
+                      <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                    </div>
+                      </div>
+
+                     <button class = "cardButton"> $1.99</button>
+
+                  </div>
+              </div>
+
+                <div class = "mainCard">
+
+                  <div class = "markedButton"> New </div>
+
+                  <div class = "upperCard">
+
+                      <img class = "cardImage" src = "images/snowyScreen.jpg" draggable="false">
+
+                  </div>
+                  <div class = "lowerCard">
+
+                      <h3 class = "cardTitle"> Snowy </h3>
+
+                      <div class = "infoSection">
+                        <div>
+                      <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                      <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                      </div>
+                      <div>
+                      <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
+                      <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                    </div>
+                      </div>
+
+                     <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-5279" target="_blank"><button class = "cardButton"> $1.99</button></a>
+
+                  </div>
+              </div>
+
+                <div class = "mainCard">
+
+                  <div class = "markedButton"> New </div>
+
+                  <div class = "upperCard">
+
                       <img class = "cardImage" src = "images/jinglesScreen.jpg" draggable="false">
 
                   </div>
@@ -681,7 +737,7 @@
                     </div>
                       </div>
 
-                     <button class = "cardButton"> $1.99</button>
+                     <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-5221" target="_blank"><button class = "cardButton"> $1.99</button></a>
 
                   </div>
               </div>
@@ -851,8 +907,6 @@
                 </div>
 
                 <div class = "mainCard">
-
-                    <div class = "markedButton"> New </div>
 
                     <div class = "upperCard">
 
