--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
             <div class = "mainCardBundle">
 
-                <div class = "markedButton"> Save 25% </div>
+                <div class = "markedButton"> Save 84% </div>
 
                 <div class = "upperCard">
 
@@ -138,7 +138,7 @@
                 </div>
                 <div class = "lowerCard">
 
-                    <h3 class = "cardTitle"> All clockfaces (42+) </h3>
+                    <h3 class = "cardTitle"> All clockfaces (47+) </h3>
 
                         <div class = "infoSection">
                           <div>
@@ -157,6 +157,7 @@
             </div>
 
             <div class = "mainCardBundle">
+              <div class = "markedButton"> Save 46% </div>
 
                     <div class = "upperCard">
 
@@ -168,7 +169,7 @@
                     </div>
                     <div class = "lowerCard">
 
-                        <h3 class = "cardTitle"> Women collection </h3>
+                        <h3 class = "cardTitle"> Women collection (12+) </h3>
 
                         <div class = "infoSection">
                           <div>
@@ -181,13 +182,14 @@
                       </div>
                         </div>
 
-                        <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-4983" target = "_blank" draggable="false"><button class = "cardButton"> $10.40 </button></a>
+                        <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-4983" target = "_blank" draggable="false"><button class = "cardButton"> $12.99 </button></a>
 
                     </div>
 
             </div>
 
             <div class = "mainCardBundle">
+              <div class = "markedButton"> Save 35% </div>
 
                     <div class = "upperCard">
 
@@ -212,13 +214,14 @@
                       </div>
                         </div>
 
-                            <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3375" target = "_blank" draggable="false"><button class = "cardButton"> $9.00 </button></a>
+                            <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3375" target = "_blank" draggable="false"><button class = "cardButton"> $8.99 </button></a>
 
                     </div>
 
                 </div>
 
                 <div class = "mainCardBundle">
+                  <div class = "markedButton"> Save 33% </div>
 
                         <div class = "upperCard">
 
@@ -250,6 +253,7 @@
                 </div>
 
                 <div class = "mainCardBundle">
+                  <div class = "markedButton"> Save 37% </div>
 
                         <div class = "upperCard">
 
@@ -261,7 +265,7 @@
                         </div>
                         <div class = "lowerCard">
 
-                            <h3 class = "cardTitle"> Squares </h3>
+                            <h3 class = "cardTitle"> Squares (4+) </h3>
 
                             <div class = "infoSection">
                               <div>
@@ -281,6 +285,7 @@
                 </div>
 
                 <div class = "mainCardBundle">
+                  <div class = "markedButton"> Save 35% </div>
 
                         <div class = "upperCard">
 
@@ -292,7 +297,7 @@
                         </div>
                         <div class = "lowerCard">
 
-                            <h3 class = "cardTitle"> Shapes Bundle </h3>
+                            <h3 class = "cardTitle"> Shapes Bundle (7+) </h3>
 
                             <div class = "infoSection">
                               <div>
@@ -305,13 +310,14 @@
                           </div>
                             </div>
 
-                            <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3978" target = "_blank" draggable="false"><button class = "cardButton"> $7.99 </button></a>
+                            <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3978" target = "_blank" draggable="false"><button class = "cardButton"> $8.99 </button></a>
 
                         </div>
 
                 </div>
 
                 <div class = "mainCardBundle">
+                  <div class = "markedButton"> Save 40% </div>
 
                         <div class = "upperCard">
 
@@ -343,6 +349,7 @@
                 </div>
 
                 <div class = "mainCardBundle">
+                  <div class = "markedButton"> Save 40% </div>
 
                         <div class = "upperCard">
 
@@ -374,6 +381,7 @@
                 </div>
 
                 <div class = "mainCardBundle">
+                  <div class = "markedButton"> Save 40% </div>
 
                         <div class = "upperCard">
 
@@ -405,6 +413,7 @@
                 </div>
 
                 <div class = "mainCardBundle">
+                  <div class = "markedButton"> Save 40% </div>
 
                         <div class = "upperCard">
 
@@ -491,6 +500,37 @@
                     </div>
                 </div>
 
+
+                <div class = "mainCardSoon">
+
+                  <div class = "markedButton"> Soon </div>
+
+                  <div class = "upperCard">
+
+                      <img class = "cardImage" src = "images/spikesScreen.jpg" draggable="false">
+
+                  </div>
+                  <div class = "lowerCard">
+
+                      <h3 class = "cardTitle"> Spikes </h3>
+
+                      <div class = "infoSection">
+                        <div>
+                      <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                      <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                      </div>
+                      <div>
+                      <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
+                      <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                    </div>
+                      </div>
+
+                    <button class = "cardButton"> $1.99</button>
+
+                  </div>
+              </div>
+
+
                 <div class = "mainCard">
 
                     <div class = "upperCard">
@@ -544,6 +584,35 @@
 
                     </div>
                 </div>
+
+
+                <div class = "mainCard">
+
+                  <div class = "upperCard">
+
+                      <img class = "cardImage" src = "images/bnwScreen.jpg" draggable="false">
+
+                  </div>
+                  <div class = "lowerCard">
+
+                      <h3 class = "cardTitle"> Black and White </h3>
+
+                      <div class = "infoSection">
+                        <div>
+                      <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                      <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                      </div>
+                      <div>
+                      <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
+                      <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                    </div>
+                      </div>
+
+                     <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-5677" target="_blank"><button class = "cardButton"> $1.99</button></a>
+
+                  </div>
+              </div>
+
 
                 <div class = "mainCard">
 
@@ -626,9 +695,34 @@
                     </div>
                 </div>
 
-                <div class = "mainCardSoon">
+                <div class = "mainCard">
 
-                  <div class = "markedButton"> Soon </div>
+                  <div class = "upperCard">
+
+                      <img class = "cardImage" src = "images/bakeryScreen.jpg" draggable="false">
+
+                  </div>
+                  <div class = "lowerCard">
+
+                      <h3 class = "cardTitle"> Bakery </h3>
+
+                      <div class = "infoSection">
+                        <div>
+                      <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                      <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                      </div>
+                      <div>
+                      <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
+                      <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                    </div>
+                      </div>
+
+                     <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-5558" target="_blank"><button class = "cardButton"> $1.99</button></a>
+
+                  </div>
+              </div>
+
+                <div class = "mainCard">
 
                   <div class = "upperCard">
 
@@ -650,14 +744,12 @@
                     </div>
                       </div>
 
-                     <button class = "cardButton"> $1.99</button>
+                     <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-5411" target="_blank"><button class = "cardButton"> $1.99</button></a>
 
                   </div>
               </div>
 
-                <div class = "mainCardSoon">
-
-                  <div class = "markedButton"> Soon </div>
+                <div class = "mainCard">
 
                   <div class = "upperCard">
 
@@ -679,14 +771,12 @@
                     </div>
                       </div>
 
-                     <button class = "cardButton"> $1.99</button>
+                     <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-5335" target="_blank"><button class = "cardButton"> $1.99</button></a>
 
                   </div>
               </div>
 
                 <div class = "mainCard">
-
-                  <div class = "markedButton"> New </div>
 
                   <div class = "upperCard">
 
@@ -715,8 +805,6 @@
 
                 <div class = "mainCard">
 
-                  <div class = "markedButton"> New </div>
-
                   <div class = "upperCard">
 
                       <img class = "cardImage" src = "images/jinglesScreen.jpg" draggable="false">
@@ -742,9 +830,36 @@
                   </div>
               </div>
 
-              <div class = "mainCardSoon">
 
-                <div class = "markedButton"> Soon </div>
+              <div class = "mainCard">
+
+                <div class = "upperCard">
+
+                    <img class = "cardImage" src = "images/birdsScreen.jpg" draggable="false">
+
+                </div>
+                <div class = "lowerCard">
+
+                    <h3 class = "cardTitle"> Birds </h3>
+
+                    <div class = "infoSection">
+                      <div>
+                    <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                    <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                    </div>
+                    <div>
+                    <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
+                    <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                  </div>
+                    </div>
+
+                   <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-6443" target="_blank"><button class = "cardButton"> $1.99</button></a>
+
+                </div>
+            </div>
+              
+
+              <div class = "mainCard">
 
                 <div class = "upperCard">
 
@@ -766,7 +881,7 @@
                   </div>
                     </div>
 
-                   <button class = "cardButton"> $1.99</button>
+                   <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-5235" target="_blank"><button class = "cardButton"> $1.99</button></a>
 
                 </div>
             </div>
@@ -797,6 +912,33 @@
 
                     </div>
                 </div>
+
+                <div class = "mainCard">
+
+                  <div class = "upperCard">
+
+                      <img class = "cardImage" src = "images/frozenScreen.jpg" draggable="false">
+
+                  </div>
+                  <div class = "lowerCard">
+
+                      <h3 class = "cardTitle"> Frozen </h3>
+
+                      <div class = "infoSection">
+                        <div>
+                      <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                      <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                      </div>
+                      <div>
+                      <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
+                      <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                    </div>
+                      </div>
+
+                     <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-5506" target="_blank"><button class = "cardButton"> $1.99</button></a>
+
+                  </div>
+              </div>
 
                 <div class = "mainCard">
 
