--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 </div>
                 <div class = "lowerCard">
 
-                    <h3 class = "cardTitle"> All clockfaces (47+) </h3>
+                    <h3 class = "cardTitle"> All clockfaces (48+) </h3>
 
                         <div class = "infoSection">
                           <div>
@@ -157,7 +157,7 @@
             </div>
 
             <div class = "mainCardBundle">
-              <div class = "markedButton"> Save 46% </div>
+              <div class = "markedButton"> Save 61% </div>
 
                     <div class = "upperCard">
 
@@ -169,7 +169,7 @@
                     </div>
                     <div class = "lowerCard">
 
-                        <h3 class = "cardTitle"> Women collection (12+) </h3>
+                        <h3 class = "cardTitle"> Women collection (13+) </h3>
 
                         <div class = "infoSection">
                           <div>
@@ -317,7 +317,6 @@
                 </div>
 
                 <div class = "mainCardBundle">
-                  <div class = "markedButton"> Save 40% </div>
 
                         <div class = "upperCard">
 
@@ -349,7 +348,6 @@
                 </div>
 
                 <div class = "mainCardBundle">
-                  <div class = "markedButton"> Save 40% </div>
 
                         <div class = "upperCard">
 
@@ -381,7 +379,6 @@
                 </div>
 
                 <div class = "mainCardBundle">
-                  <div class = "markedButton"> Save 40% </div>
 
                         <div class = "upperCard">
 
@@ -413,7 +410,6 @@
                 </div>
 
                 <div class = "mainCardBundle">
-                  <div class = "markedButton"> Save 40% </div>
 
                         <div class = "upperCard">
 
@@ -529,6 +525,35 @@
 
                   </div>
               </div>
+
+              <div class = "mainCardSoon">
+
+                <div class = "markedButton"> Soon </div>
+
+                <div class = "upperCard">
+
+                    <img class = "cardImage" src = "images/frogScreen.jpg" draggable="false">
+
+                </div>
+                <div class = "lowerCard">
+
+                    <h3 class = "cardTitle"> Dreaming Frog </h3>
+
+                    <div class = "infoSection">
+                      <div>
+                    <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                    <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                    </div>
+                    <div>
+                    <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
+                    <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                  </div>
+                    </div>
+
+                  <button class = "cardButton"> $1.99</button>
+
+                </div>
+            </div>
 
 
                 <div class = "mainCard">
